# api/src/main/resources/swagger.json
@@ -119,7 +119,46 @@
         }
       }
     },
-    "/auth/signup": {
+    "/auth/logout": {
+      "post": {
+        "tags": [
+          "login-controller"
+        ],
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "summary": "Attempts logging the user out",
+        "operationId": "logOut",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "./schema/responses/errorResponse.schema.json"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Internal Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "./schema/responses/errorResponse.schema.json"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/auth/register-user": {
       "post": {
         "tags": [
           "login-controller"
@@ -135,6 +174,56 @@
             }
           }
         },
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "string"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad Request",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "./schema/responses/errorResponse.schema.json"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Internal Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "./schema/responses/errorResponse.schema.json"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/auth/verify": {
+      "get": {
+        "tags": [
+          "login-controller"
+        ],
+        "summary": "Verifies an email address",
+        "operationId": "verifyEmail",
+        "parameters": [
+          {
+            "in": "query",
+            "name": "q",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
         "responses": {
           "200": {
             "description": "OK",
